Fixed alignment of small star to be completely vertically centered

--- a/frontend/app/src/static/less/layout.less
+++ b/frontend/app/src/static/less/layout.less
@@ -791,9 +791,8 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
     height: @grid-vertical-medium;       // [1]
     line-height: @grid-vertical-medium;  // [1]
     & > span.icon-star.small {
-      line-height: @grid-vertical-small;
-      padding-top: 4px - 1px;
-      padding-bottom: 4px + 1px;
+      height: @size-icon-star-small;
+      line-height: @size-icon-star-small;
     }
   }
 }
